--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <div class="box1">
             <div class="box2"> 
                 <div class="box4">
-                    <p><span style="margin-top: 80px;"><a href="#"><img src="images/dash.png" width="50px" height="50px" style="margin-top: 25px;"></a></span></p>
+                    <p><span style="margin-top: 80px;"><a href="#"><img src="dash.png" width="50px" height="50px" style="margin-top: 25px;"></a></span></p>
                 </div>
-                <p style="margin-top: 500px; margin-left: 10px;"><a href="#"><img src="images/download (9).png" width="50px" height="40px"></a></p>
+                <p style="margin-top: 500px; margin-left: 10px;"><a href="#"><img src="download (9).png" width="50px" height="40px"></a></p>
                 <p style="margin-left: 15px;"><a href="#"><img src="images/twitter-vector-png-7.png" width="40px" height="40px"></a></p>
             </div>
             <div class="box3">
                 <div class="logo">
-                    <img src="images/logo1.png" alt="logo" width="90px" height="50px">
+                    <img src="logo1.png" alt="logo" width="90px" height="50px">
                 </div>      
                     <table class="table1">
                         <tbody>
@@ -28,7 +28,7 @@
                                 <td width="111"><span><a href="#" style="color: white; text-decoration: none;"><strong>About</strong></a></span></td>
                                 <td width="111"><span><a href="#" style="color: white; text-decoration: none;"><strong>Letters</strong></a></span></td>
                                 <td width="111"><span><a href="#" style="color: white; text-decoration: none;"><strong>Cart</strong></a></span></td>
-                                <td width="111"><span><a href="#" style="color: white; text-decoration: none;"><strong><img src="images/search.png" width="40px" height="40px"></strong></a></span></td>
+                                <td width="111"><span><a href="#" style="color: white; text-decoration: none;"><strong><img src="search.png" width="40px" height="40px"></strong></a></span></td>
                             </tr>
                         </tbody>
                     </table>
