--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <p><span style="margin-top: 80px;"><a href="#"><img src="dash.png" width="50px" height="50px" style="margin-top: 25px;"></a></span></p>
                 </div>
                 <p style="margin-top: 500px; margin-left: 10px;"><a href="#"><img src="download (9).png" width="50px" height="40px"></a></p>
-                <p style="margin-left: 15px;"><a href="#"><img src="images/twitter-vector-png-7.png" width="40px" height="40px"></a></p>
+                <p style="margin-left: 15px;"><a href="#"><img src="twitter-vector-png-7.png" width="40px" height="40px"></a></p>
             </div>
             <div class="box3">
                 <div class="logo">
@@ -51,7 +51,7 @@
             <div class="box5">
                 <p style="margin-top: 40px; margin-left: 40px; float: left;"><span style="color: white; position: absolute;"><strong>Events</strong><br>Pages are in and so in place <br>place in place divs</span></p>
                 <p style="margin-left: 230px; margin-top: 60px; float: left;"><span style="color: white; position: absolute;"><strong>events@gmail.com/ug <br>Contact: +256148872625</strong></span></p>
-                <span style="margin-left: 220px; margin-top: 0px; float: left;"><img src="images/bag.jpg" alt="" width="180px" height="200px" style="margin-top: 0px;"></span>
+                <span style="margin-left: 220px; margin-top: 0px; float: left;"><img src="bag.jpg" alt="" width="180px" height="200px" style="margin-top: 0px;"></span>
                 <p style="margin-top: 20px; float: left; margin-left: 50px;"><span style="color: white;"><strong>News</strong><br><br>There news here so good ! <br>so read them hard and so hard! <br><br><a href="#" style="text-decoration: none; color: white;"><strong>Read More</strong></a></span></p>
             </div>
         </div>
